# network-interface-copy

libs/bsw/lwipSocket/: CMakeLists.txt
libs/bsw/lwipSocket/include/lwipSocket/netif/: NetworkInterface.h  NetworkInterfaceCollection.h
libs/bsw/lwipSocket/src/lwipSocket/netif/: NetworkInterface.cpp  NetworkInterfaceCollection.cpp
